@@ -21,8 +21,7 @@ locale  foxreplace  zh-TW   locale/zh-TW/
 resource foxreplace modules/
 skin    foxreplace  classic/1.0 skin/default/
 skin    foxreplace-os   classic/1.0 skin/default/unix/
-skin    foxreplace-os   classic/1.0 skin/default/win/   os=WINNT
-skin    foxreplace-os   classic/1.0 skin/default/mac/   os=Darwin
+skin    foxreplace-os   classic/1.0 skin/default/win-mac/   os=WINNT os=Darwin
 overlay chrome://browser/content/browser.xul    chrome://foxreplace/content/foxreplace.xul
 style   chrome://global/content/customizeToolbar.xul    chrome://foxreplace/skin/foxreplace.css
 
