@@ -1,3 +1,0 @@
-#fxrToolbarButton {
-  list-style-image: url("chrome://foxreplace-os/skin/toolbar-icon.png");
-}
