@@ -1,5 +1,6 @@
 * Textboxes in the replace bar use as much width as they can.
 * Change event is fired when a substitution changes text in an input or textarea element (issue 49).
+* Updated toolbar icon sizes.
 
 v0.14.0 (16-1-2013)
 * Removed compatibility with the substitution list in the 0.10 format.
